# mpsh

./: .gitignore  .mpsh_history  .mpshrc  CMakeLists.txt  Makefile  README.md  analyseur.c  analyseur.h  commandes_internes.c  commandes_internes.h  extra.c  extra.h  install.sh  main.c  min.sh  mpsh  parser.c  parser.h  redirection.c  redirection.h  script.sh  traitement.c  traitement.h  variables.h
